force-app/main/default/objects/Opportunity/fields/Channel_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Code_Name__c</fullName>
    <label>Channel Code Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel_Code_Name</valueSetName>
    </valueSet>
</CustomField>