force-app/main/default/objects/Opportunity/fields/Channel_Group__c.field-meta.xml
<CustomField>
    <fullName>Channel_Group__c</fullName>
    <label>Channel Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Channel_Global_Indicator__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Channel_Group</valueSetName>
    </valueSet>
</CustomField>