force-app/main/default/objects/Opportunity/fields/Date_of_Enquiry_Reception__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Enquiry_Reception__c</fullName>
    <inlineHelpText>Date email or phone call was received.</inlineHelpText>
    <label>Date of Enquiry Reception</label>
    <type>Date</type>
</CustomField>