force-app/main/default/objects/Opportunity/fields/Deadline_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Deadline_Proposal__c</fullName>
    <label>Deadline Proposal</label>
    <type>Date</type>
</CustomField>