force-app/main/default/objects/Opportunity/fields/Destination_Country__c.field-meta.xml
<CustomField>
    <fullName>Destination_Country__c</fullName>
    <label>Destination (Country)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>