force-app/main/default/objects/Opportunity/fields/End_Client__c.field-meta.xml
<CustomField>
    <fullName>End_Client__c</fullName>
    <label>End Client</label>
    <length>120</length>
    <type>Text</type>
</CustomField>