force-app/main/default/objects/Opportunity/fields/Extend_Option_Date__c.field-meta.xml
<CustomField>
    <fullName>Extend_Option_Date__c</fullName>
    <label>Extend Option Date</label>
    <type>Date</type>
</CustomField>