force-app/main/default/objects/Opportunity/fields/Final_Amount_EUR__c.field-meta.xml
<CustomField>
    <fullName>Final_Amount_EUR__c</fullName>
    <label>Final Amount (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>