force-app/main/default/objects/Opportunity/fields/IsSeries__c.field-meta.xml
<CustomField>
    <fullName>IsSeries__c</fullName>
    <description>Denotes if an Opportunity is part of a series and allows identification of type of series if applicable (either Leisure Series or Event Series).</description>
    <inlineHelpText>Please select if this Opportunity is part of a Leisure Series or Event Series.</inlineHelpText>
    <label>Is Series?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Leisure Series</fullName>
            </value>
            <value>
                <fullName>Event Series</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>