force-app/main/default/objects/Opportunity/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client chose competitor</fullName>
            </value>
            <value>
                <fullName>Rates are too high</fullName>
            </value>
            <value>
                <fullName>Client chose other destination</fullName>
            </value>
            <value>
                <fullName>Event is cancelled / postponed</fullName>
            </value>
            <value>
                <fullName>No reasons mentioned</fullName>
            </value>
            <value>
                <fullName>No feedback from client</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>