force-app/main/default/objects/Opportunity/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <formula>$RecordType.DeveloperName + &apos;-&apos; +  Oppty_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ID</label>
    <type>Text</type>
</CustomField>