force-app/main/default/objects/Opportunity/fields/Oppty_ID__c.field-meta.xml
<CustomField>
    <fullName>Oppty_ID__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Oppty ID</label>
    <type>AutoNumber</type>
</CustomField>