force-app/main/default/objects/Opportunity/fields/Room_Nights__c.field-meta.xml
<CustomField>
    <fullName>Room_Nights__c</fullName>
    <label>Room Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>