force-app/main/default/objects/Opportunity/fields/Room_Nights_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Room_Nights_Attendees__c</fullName>
    <label>Room Nights/# Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>