force-app/main/default/objects/Opportunity/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sector</valueSetName>
    </valueSet>
</CustomField>