force-app/main/default/objects/Opportunity/fields/Segment_Code__c.field-meta.xml
<CustomField>
    <fullName>Segment_Code__c</fullName>
    <label>Segment Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segment_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Segment_Code</valueSetName>
    </valueSet>
</CustomField>