force-app/main/default/objects/Opportunity/fields/Segment_Group_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Segment_Group_Indicator__c</fullName>
    <label>Segment Group Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segment_Global_Indicator</valueSetName>
    </valueSet>
</CustomField>