force-app/main/default/objects/Opportunity/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email Seller</fullName>
            </value>
            <value>
                <fullName>Email Client</fullName>
                <default>true</default>
                <label>Email Client</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>