force-app/main/default/objects/Opportunity/recordTypes/Crew.recordType-meta.xml
<RecordType>
    <fullName>Crew</fullName>
    <active>true</active>
    <businessProcess>DH</businessProcess>
    <label>Crew</label>
</RecordType>