force-app/main/default/objects/Opportunity/recordTypes/MICE.recordType-meta.xml
<RecordType>
    <fullName>MICE</fullName>
    <active>true</active>
    <businessProcess>DH</businessProcess>
    <label>MICE</label>
</RecordType>