force-app/main/default/objects/Opportunity/validationRules/LossReason.validationRule-meta.xml
<ValidationRule>
    <fullName>LossReason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Lost_Reason__c,&quot;Other&quot;) &amp;&amp;  ISBLANK(Loss_Reason_Info__c)</errorConditionFormula>
    <errorDisplayField>Loss_Reason_Info__c</errorDisplayField>
    <errorMessage>When choosing other Loss Reason Info is required.</errorMessage>
</ValidationRule>