force-app/main/default/objects/Opportunity/validationRules/Opportunity_Stage_Lost_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Stage_Lost_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(TEXT(Lost_Reason__c)), OR(TEXT(StageName) = &quot;Closed Lost&quot;,TEXT(StageName) = &quot;Closed Denied&quot;))</errorConditionFormula>
    <errorDisplayField>Lost_Reason__c</errorDisplayField>
    <errorMessage>When &quot;Stage&quot; is selected as &quot;Closed Lost&quot; or &quot;Denied&quot; make Lost Reason field mandatory.</errorMessage>
</ValidationRule>