force-app/main/default/objects/Opportunity/validationRules/Third_Party_End_Client.validationRule-meta.xml
<ValidationRule>
    <fullName>Third_Party_End_Client</fullName>
    <active>true</active>
    <errorConditionFormula>Account.RecordType.DeveloperName = &apos;Third_Party_Account&apos; &amp;&amp;  ISBLANK(End_Client__c)</errorConditionFormula>
    <errorDisplayField>End_Client__c</errorDisplayField>
    <errorMessage>“End Client” is required field if the Account is a Third Party.</errorMessage>
</ValidationRule>